--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.2",
     "mongoose": "^8.16.5",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "dotenv": "^16.4.5"
   }
 }
